fix: tag名などの変更をmypageに反映

--- a/mypage/editresume.html
+++ b/mypage/editresume.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A++ Edit resume</title>
+    <title>A++ my resume</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
@@ -44,16 +44,6 @@
           <div class="personal-info">
             <div class="personal-info-title">陳小喬</div>
             <div class="personal-info-contents">
-              <!-- <div id="dragDropArea">
-                <div class="drag-drop-inside">
-                    <p class="drag-drop-info">drop the file here</p>
-                    <p>or</p>
-                    <p class="drag-drop-buttons">
-                        <input id="fileInput" type="file" accept="image/*" value="ファイルを選択" name="photo" onChange="photoPreview(event)">
-                    </p>
-                    <div id="previewArea"></div>
-                </div>
-              </div> -->
               <div class="personal-info-contents__image">
                 <div class="image-area">
                   <img class="preview" id="preview">
@@ -79,12 +69,12 @@
           <div class="experience">
             <div class="experience-top">工作經歷 Experience</div>
             <ul class="experience-contents">
-              <li><label for="">開始年月</label><br><input type="date" name="start_month[0]" placeholder="2022/1" required></li>
+              <li><label for="start-month-[0]">開始年月</label><br><input type="date" name="start_month[0]" id="start-month-[0]" placeholder="2022/1" required></li>
               <li>~<p></p></li>
-              <li><label for="">結束年月</label><br><input type="date" name="end_month[0]" placeholder="現在" required></li>
-              <li><label for="">共計年月</label><br><input type="text" name="total_month[0]" placeholder="0年3個月" required></li>
-              <li><label for="">職稱</label><br><input type="text" name="job_title[0]" placeholder="請填寫職稱 EX:建築設計師" required></li>
-              <li><label for="">就職公司</label><br><input type="text" name="employment[0]" placeholder="請填寫公司名稱 EX:某建築師事務所" required></li>
+              <li><label for="end-month-[0]">結束年月</label><br><input type="date" name="end_month[0]" id="end-month-[0]" placeholder="現在" required></li>
+              <li><label for="total-month-[0]">共計年月</label><br><input type="text" name="total_month[0]" id="total-month-[0]" placeholder="0年3個月" required></li>
+              <li><label for="job-title-[0]">職稱</label><br><input type="text" name="job_title[0]" id="job-title-[0]" placeholder="請填寫職稱 EX:建築設計師" required></li>
+              <li><label for="employment-[0]">就職公司</label><br><input type="text" name="employment[0]" id="employment-[0]" placeholder="請填寫公司名稱 EX:某建築師事務所" required></li>
             </ul>
               
             <div class="experience-note"><textarea placeholder="簡述, 工作重點, 負責專案, 備註"></textarea></div>
@@ -92,31 +82,31 @@
           <div class="education">
             <div class="education-top">學歷 Education</div>
             <ul class="education-contents">
-              <li><label>開始年月</label><br><input type="date" name="begin_month[0]" placeholder="2020/9" required></li>
+              <li><label for="begin-month-[0]">開始年月</label><br><input type="date" name="begin_month[0]" id="begin-month-[0]" placeholder="2020/9" required></li>
               <li>~<p></p></li>
-              <li><label>結束年月</label><br><input type="date" name="last_month[0]"></li>
+              <li><label for="last-month-[0]">結束年月</label><br><input type="date" id="last-month-[0]" name="last_month[0]"></li>
               <li>
-                <input type="radio" name="graduate[0]" id="graduate">
-                <label for="graduate"  class="education-radio-button">畢業</label>
+                <input type="radio" name="graduate[0]" id="graduate-[0]">
+                <label for="graduate-[0]"  class="education-radio-button">畢業</label>
               </li>
               <li>
-                <input type="radio" name="graduate[0]" id="n-graduate">
-                <label for="n-graduate"  class="education-radio-button">肄業</label>
+                <input type="radio" name="graduate[0]" id="n-graduate-[0]">
+                <label for="n-graduate-[0]"  class="education-radio-button">肄業</label>
               </li>
-              <li><label>學校</label><br><input type="text" name="school[0]" placeholder="台湾大学"></li>
-              <li><label>科系</label><br><input type="text" name="subject[0]" placeholder="土木工程系"></li>
-              <li><label>學位</label><br><input type="text" name="degree[0]" placeholder="博⼠候選⼈" ></li>
+              <li><label for="school-[0]">學校</label><br><input type="text" name="school[0]" id="school-[0]" placeholder="台湾大学"></li>
+              <li><label for="subject-[0]">科系</label><br><input type="text" name="subject[0]" id="subject-[0]" placeholder="土木工程系"></li>
+              <li><label for="degree-[0]">學位</label><br><input type="text" name="degree[0]" id="degree-[0]" placeholder="博⼠候選⼈" ></li>
             </ul>
           </div>
-          <div class="lisence">
-            <div class="lisence-top">
+          <div class="license">
+            <div class="license-top">
               專業證照｜獲獎紀錄｜相關社團參與
               <button type="button" value="フォーム追加" onclick="addForm()">
                 <img src="../img/icon/addformDark.png" alt="">+
               </button>
             </div>           
-            <div class="lisence-contents" id="form_area">
-              <input type="text" name="lisence[0]" placeholder="台灣台北註冊建築師" required>
+            <div class="license-contents" id="form_area">
+              <input type="text" name="license[0]" placeholder="台灣台北註冊建築師" required>
               <button type="button" id="0" onclick="deleteBtn(this)"></button>
             </div>
           </div>
@@ -125,8 +115,8 @@
             <div class="hobby-bottom"><textarea name="" placeholder="素描, 建築素描, 測繪, 旅行" required></textarea></div>
           </div>
           <div class="info-submit">
-            <button type="button" class="backtoprevious"><a href="./step1.html">上一頁</a></button>
             <button type="submit" name=""><a href="./step3.html">送出</a></button>
+            <button type="button" class="backtoprevious"><a href="./step1.html" >上一頁</a></button>
           </div>
         </form>
       </div>
