fix: mypage info から不要な要素削除

--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -36,28 +36,8 @@
       </div>
       <!-- // yellow-box -->
 
-      <!-- white-box steps-->
-      <div class="steps">
-        <div class="white-box">
-          <div class="white-box-contents">
-            <p><span>STEP1</span>註冊成為會員</p>
-            您將收到一封驗證電子郵件,請由此設定新密碼。
-            <p><div class="triangle-bottom"></div></p>
-            <p><span>STEP2</span>填寫個人履歷</p>
-            登入後, 請填寫個人履歷。
-            <p><div class="triangle-bottom"></div></p>
-            <p><span>STEP3</span>填寫自我評量</p>
-            獨家6級評量表, 更明確了解個人專業能力。
-            <p><div class="triangle-bottom"></div></p>
-            <p><span>STEP4</span>完成&nbsp;&nbsp;&nbsp;&nbsp;</p>
-            完成後, 便可開始媒合工作。
-          </div>
-        </div>
-      </div>
-      <!-- // white-box steps-->
-
       <!-- white-box Account-information -->
-      <div class="account-info">
+      <div class="account-info-edit">
         <form class="form-account-info" action="action.php" method="post" enctype="multipart/form-data">
           <table class="account-info-input">
             <tr>
@@ -93,17 +73,8 @@
               <td><input type="tel" name="phone" id="phone" required></td>
             </tr>
           </table>
-          <div class="agreement">
-            <label>
-              <input class="agree-checkbox" type="checkbox" name="check_name">
-              <span>
-                本人已閱讀並同意Ａ＋＋的
-                <a href="">網站使用規約及服務條款</a>與<a href="">隱私權政策</a>
-              </span>
-            </label>
-          </div>
           <div class="submit-button">
-            <button type="submit"><a href="./step2.html"></a>註冊</button>
+            <button type="submit"><a href="./step2.html"></a>修改</button>
           </div>
           <div class="backtologin">
             如果您已是A++會員請<a href="../userlogin.html">登⼊</a>
@@ -112,19 +83,6 @@
       </div>
       <!-- // white-box Account-information -->
 
-      <!-- accordion-menu -->
-      <div class="accordion-menu">
-        <div class="accordion-menu__area">
-          <details>
-            <summary class="register-base-top">註冊標準<img src="../img/arrow_down_red.svg" alt=""></summary>
-            <div class="resister-base-contents">test</div>
-          </details>
-          <details>
-            <summary>外國公民<img src="../img/arrow_down_red.svg" alt=""></summary>
-          </details>
-        </div>
-      </div>
-      <!-- // accordion-menu -->
     </div>
 
     <!-- Pagetop -->
