--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- TODO: コンソールに何も表示されないようにする @shin -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -41,7 +42,6 @@
           </nav>
           <div class="c-spacer"></div>
           <div class="h-top-btn">
-            <!-- TODO:inset Link -->
             <a href="" class="h-top-btn__link">未來匠師</a>
           </div>
           <div class="h-top-search">
@@ -96,7 +96,6 @@
         <div class="header__inner">
           <nav class="h-bottom-nav">
             <ul class="h-bottom-nav__list">
-              <!-- TODO:Link -->
               <li class="h-bottom-nav__item">
                 <a href="" class="h-bottom-nav__link">熱門職缺++</a>
               </li>
@@ -497,7 +496,6 @@
               <div class="c-search-box-modal__footer-content">
                 <div class="c-search-box-modal__footer-tags">
                   <div class="c-search-box-modal__delete">
-                    <!-- TODO:Since it is not possible to copy and paste, it is written in English. -->
                     <button>All Delete</button>
                   </div>
                   <ul class="c-search-box-modal__footer-tags-list">
@@ -526,7 +524,7 @@
           </div>
           <!-- // Search Box Modal -->
 
-          <!-- Recommendtion -->
+          <!-- Recommendation -->
           <section class="main-section recommend">
             <h2 class="main-section__heading -col">
               <div class="main-section__icon">
@@ -639,7 +637,7 @@
               <a href="更多" class="c-arrow-link">更多</a>
             </div>
           </section>
-          <!-- // Recommendtion -->
+          <!-- // Recommendation -->
 
           <!-- Occupation -->
           <section class="main-section occupation">
@@ -1180,7 +1178,6 @@
                 <!-- For -->
                 <!-- item -->
                 <li class="announcement__item">
-                  <!-- TODO: If you do not add a link, change to a `<p>` -->
                   <a href="#" class="announcement__link">
                     <time>2022/1/27</time>
                     系統測試中系統測試中
@@ -1310,7 +1307,6 @@
       <div class="c-banner">
         <p class="c-banner__text">更多全國專案外包工作等著你喔!</p>
         <div class="c-banner__button c-button -orange">
-          <!-- TODO:Insert Link -->
           <a href="" class="c-button__link">
             <span class="c-button__icon">
               <img src="./img/banner_icon1.svg" alt="" />
