--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -1,3 +1,7 @@
+<!-- TODO:１つ１つの要素について理解する必要がある。このページに不要なものが他にもいくつかあるように思う。また、パスワードは必須である必要性はあるのか？ @shin -->
+<!-- TODO:コンソールエラーの解消 @shin -->
+<!-- TODO:全ページのfaviconの設定 @shin -->
+<!-- TODO:swiperのcssを読み込む必要性はあるのか？(全ページ) @shin -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -117,7 +121,7 @@
       </div>
     </footer>
 
-        <!-- Scripts -->
+    <!-- Scripts -->
     <!-- ↓Home only -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="../js/script.js"></script>
