--- a/userlogin.html
+++ b/userlogin.html
@@ -1,3 +1,8 @@
+<!-- TODO: 基本的なタイトルの付け方について調べて適用させる @shin -->
+<!-- TODO: imgタグのaltが空のままになっているページが多い(全ページ) @shin -->
+<!-- TODO: 「id、for」をつけているものに関して 空、重複していることがある(全ページ) @shin -->
+<!-- TODO: 全ページへのリンクが掲載されているページを作成→ページ数が多く、確認に時間がかかるため @shin -->
+<!-- TODO: リンクが貼れるページでは全て貼り替える(全ページ) @shin -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
