--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A++</title>
+    <!-- TODO:ライブラリをインストールして利用する形にする -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
@@ -54,7 +55,6 @@
                 type="search"
                 name="search"
                 class="h-top-search__input"
-                id=""
               />
             </form>
           </div>
@@ -220,7 +220,7 @@
         <!-- Search Box PC -->
         <div class="search-box">
           <div class="c-select">
-            <select name="" id="">
+            <select name="">
               <option value="北部地區">北部地區</option>
               <option value="中部地區">中部地區</option>
               <option value="南部地區">南部地區</option>
@@ -230,7 +230,7 @@
             </select>
           </div>
           <div class="c-select">
-            <select name="" id="">
+            <select name="">
               <option value="職業類別">職業類別</option>
               <option value="建築">建築</option>
               <option value="室內設計">室內設計</option>
@@ -371,7 +371,7 @@
           <!-- Search Box SP -->
           <div class="search-box">
             <div class="c-select">
-              <select name="" id="">
+              <select name="">
                 <option value="北部地區">北部地區</option>
                 <option value="中部地區">中部地區</option>
                 <option value="南部地區">南部地區</option>
@@ -381,7 +381,7 @@
               </select>
             </div>
             <div class="c-select">
-              <select name="" id="">
+              <select name="">
                 <option value="職業類別">職業類別</option>
                 <option value="建築">建築</option>
                 <option value="室內設計">室內設計</option>
@@ -989,6 +989,7 @@
               <ul class="outstanding-companies__list">
                 <li class="outstanding-companies__item">
                   <div class="outstanding-companies__logo">
+                    <!-- TODO:スペルみす ここから多数 @shin -->
                     <img src="./img/home/companie-logo/logo1.jpg" alt="" />
                   </div>
                   <p class="outstanding-companies__text">
@@ -1842,6 +1843,7 @@
 
     <!-- Scripts -->
     <!-- ↓Home only -->
+    <!-- TODO:ライブラリをインストールして利用する形にする -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/home.js"></script>
