fix: headerのdiv閉じtag忘れ修正

--- a/reg/step2.html
+++ b/reg/step2.html
@@ -22,6 +22,7 @@
               </a>
             </h1>
             <div class="c-spacer"></div>
+          </div>
         </div>
     </header>
     <div class="user-resume-body">
@@ -46,7 +47,7 @@
             <div class="personal-info-contents">
               <div class="personal-info-contents__image">
                 <div class="image-area">
-                  <img class="preview" id="preview">
+                  <img class="preview" id="preview" alt="+">
                   <input type="file" name="profile_img" required accept="image/*" onchange="previewImage(this)">
                 </div>
                 
@@ -84,18 +85,18 @@
             <ul class="education-contents">
               <li><label for="begin-month-[0]">開始年月</label><br><input type="date" name="begin_month[0]" id="begin-month-[0]" placeholder="2020/9" required></li>
               <li>~<p></p></li>
-              <li><label for="last-month-[0]">結束年月</label><br><input type="date" id="last-month-[0]" name="last_month[0]"></li>
+              <li><label for="last-month-[0]">結束年月</label><br><input type="date" id="last-month-[0]" name="last_month[0]" required></li>
               <li>
-                <input type="radio" name="graduate[0]" id="graduate-[0]">
+                <input type="radio" name="graduate[0]" id="graduate-[0]" required>
                 <label for="graduate-[0]"  class="education-radio-button">畢業</label>
               </li>
               <li>
-                <input type="radio" name="graduate[0]" id="n-graduate-[0]">
+                <input type="radio" name="graduate[0]" id="n-graduate-[0]" required>
                 <label for="n-graduate-[0]"  class="education-radio-button">肄業</label>
               </li>
-              <li><label for="school-[0]">學校</label><br><input type="text" name="school[0]" id="school-[0]" placeholder="台湾大学"></li>
-              <li><label for="subject-[0]">科系</label><br><input type="text" name="subject[0]" id="subject-[0]" placeholder="土木工程系"></li>
-              <li><label for="degree-[0]">學位</label><br><input type="text" name="degree[0]" id="degree-[0]" placeholder="博⼠候選⼈" ></li>
+              <li><label for="school-[0]">學校</label><br><input type="text" name="school[0]" id="school-[0]" placeholder="台湾大学" required></li>
+              <li><label for="subject-[0]">科系</label><br><input type="text" name="subject[0]" id="subject-[0]" placeholder="土木工程系" required></li>
+              <li><label for="degree-[0]">學位</label><br><input type="text" name="degree[0]" id="degree-[0]" placeholder="博⼠候選⼈" required></li>
             </ul>
           </div>
           <div class="license">
