--- a/userlogin.html
+++ b/userlogin.html
@@ -27,6 +27,7 @@
               </a>
             </h1>
             <div class="c-spacer"></div>
+          </div>
         </div>
     </header>
     <!-- middle logo -->
