--- a/password/confirm.html
+++ b/password/confirm.html
@@ -16,12 +16,13 @@
             <!-- Middle -->
             <div class="header__middle">
               <div class="header__inner">
-                <h1 class="h-logo">
-                  <a href="/">
-                    <img src="../img/logo.svg" alt="A++"/>
-                  </a>
-                </h1>
-                <div class="c-spacer"></div>
+                  <h1 class="h-logo">
+                    <a href="/">
+                      <img src="../img/logo.svg" alt="A++"/>
+                    </a>
+                  </h1>
+                  <div class="c-spacer"></div>
+              </div>
             </div>
         </header>
         <div class="confirm-body">
