--- a/password/email.html
+++ b/password/email.html
@@ -15,13 +15,14 @@
         <header class="header">
             <!-- Middle -->
             <div class="header__middle">
-              <div class="header__inner">
-                <h1 class="h-logo">
-                  <a href="/">
-                    <img src="../img/logo.svg" alt="A++"/>
-                  </a>
-                </h1>
-                <div class="c-spacer"></div>
+                <div class="header__inner">
+                    <h1 class="h-logo">
+                        <a href="/">
+                            <img src="../img/logo.svg" alt="A++"/>
+                        </a>
+                    </h1>
+                    <div class="c-spacer"></div>
+                </div>
             </div>
         </header>
         <div class="confirm-body">
