--- a/reg/step3.html
+++ b/reg/step3.html
@@ -22,6 +22,7 @@
               </a>
             </h1>
             <div class="c-spacer"></div>
+          </div>
         </div>
     </header>
     <div class="user-skill-body">
