update: indexにマイページへの導入ボタン追加

--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
               </a>
             </div>
             <!-- // Login -->
+            <div class="c-button -gray">
+              <a href="" class="c-button__link">
+                <span class="c-button__icon">
+                  <img src="./img/icon/myPageWhite.png" alt="">
+                </span>
+                我的頁面
+              </a>
+            </div>
           </div>
         </div>
       </div>
