update: imgタグのalt入力

--- a/mypage/editresume.html
+++ b/mypage/editresume.html
@@ -46,7 +46,7 @@
             <div class="personal-info-contents">
               <div class="personal-info-contents__image">
                 <div class="image-area">
-                  <img class="preview" id="preview">
+                  <img class="preview" id="preview" alt="preview">
                   <input type="file" name="profile_img" required accept="image/*" onchange="previewImage(this)">
                 </div>
                 
@@ -102,7 +102,7 @@
             <div class="license-top">
               專業證照｜獲獎紀錄｜相關社團參與
               <button type="button" value="フォーム追加" onclick="addForm()">
-                <img src="../img/icon/addformDark.png" alt="">+
+                <img src="../img/icon/addformDark.png" alt="pen">+
               </button>
             </div>           
             <div class="license-contents" id="form_area">
