--- a/reg/step1.html
+++ b/reg/step1.html
@@ -31,7 +31,7 @@
       <!-- yellow-box -->
       <div class="attention">
         <div class="yellow-box">
-          <img src="../img/icon/attention2.png" alt="">
+          <img src="../img/icon/attention2.png" alt="attention">
           免費註冊成為會員僅需在網站上填寫相關資料, Ａ＋＋不會主動以電話面試或聯繫。
         </div>
       </div>
@@ -63,7 +63,7 @@
           <table class="account-info-input">
             <tr>
               <td class="icon-required"><label for="user-id">ID帳號</label></td>
-              <td><input type="id" name="user_id" id="user-id" required></td>
+              <td><input type="text" name="user_id" id="user-id" required></td>
             </tr>
             <tr>
               <td class="icon-required"><label for="password">密碼</label></td>
@@ -117,11 +117,11 @@
       <div class="accordion-menu">
         <div class="accordion-menu__area">
           <details>
-            <summary class="register-base-top">註冊標準<img src="../img/arrow_down_red.svg" alt=""></summary>
+            <summary class="register-base-top">註冊標準<img src="../img/arrow_down_red.svg" alt="arrow_down"></summary>
             <div class="resister-base-contents">test</div>
           </details>
           <details>
-            <summary>外國公民<img src="../img/arrow_down_red.svg" alt=""></summary>
+            <summary>外國公民<img src="../img/arrow_down_red.svg" alt="arrow_down"></summary>
           </details>
         </div>
       </div>
