--- a/reg/step3.html
+++ b/reg/step3.html
@@ -183,7 +183,7 @@
 
           <div class="rank-base" id="rank-base">
             <div class="rank-base-title">
-              <img src="../img/icon/売り上げ分析アイコン.png" alt="">評分標準
+              <img src="../img/icon/salesAnalysis.png" alt="">評分標準
             </div>
             <table class="rankBase">
               <tr>
