--- a/userlogin.html
+++ b/userlogin.html
@@ -1,5 +1,3 @@
-<!-- TODO: 基本的なタイトルの付け方について調べて適用させる @shin -->
-<!-- TODO: imgタグのaltが空のままになっているページが多い(全ページ) @shin -->
 <!-- TODO: 「id、for」をつけているものに関して 空、重複していることがある(全ページ) @shin -->
 <!-- TODO: 全ページへのリンクが掲載されているページを作成→ページ数が多く、確認に時間がかかるため @shin -->
 <!-- TODO: リンクが貼れるページでは全て貼り替える(全ページ) @shin -->
@@ -32,7 +30,7 @@
     </header>
     <!-- middle logo -->
     <div class="m-logo"> 
-      <img src="./img/logoflipcolor.svg" alt="">
+      <img src="./img/logoflipcolor.svg" alt="A++">
     </div>
     <!-- login form -->
     <form>
@@ -51,7 +49,7 @@
         <div class="c-button-white">
           <button class="c-button__link" type="submit">
             <span class="c-button__icon">
-              <img src="./img/icon/loginicon.png" alt="" />
+              <img src="./img/icon/loginicon.png" alt="login" />
             </span>
             登入
           </button>
