fix: idやforの空、重複状態を修正&その他スペルミスなど

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               </a>
             </div>
             <!-- // Login -->
-            <div class="c-button -gray">
+            <div class="c-button -orange">
               <a href="" class="c-button__link">
                 <span class="c-button__icon">
                   <img src="./img/icon/myPageWhite.png" alt="">
