--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -49,7 +49,7 @@
             <tr>
               <td class="icon-required"><label for="user-id">ID帳號</label></td>
               <!-- TODO: このtypeはサポートされているの？ @shin -->
-              <td><input type="id" name="user_id" id="user-id" required></td>
+              <td><input type="text" name="user_id" id="user-id" required></td>
             </tr>
             <tr>
               <td class="icon-required"><label for="password">密碼</label></td>
@@ -65,8 +65,8 @@
             </tr>
             <tr>
               <!-- TODO:スペルミス -->
-              <td class="icon-required"><label for="givin-name">名字</label></td>
-              <td><input type="text" name="givin_name" id="givin-name" required></td>
+              <td class="icon-required"><label for="given-name">名字</label></td>
+              <td><input type="text" name="given_name" id="given-name" required></td>
             </tr>
             <tr>
               <td class="icon-required"><label for="birthday">出生日期</label></td>
