--- a/mypage/editskill.html
+++ b/mypage/editskill.html
@@ -44,7 +44,7 @@
             <div class="work-skill sp-tgl-wrap">
               <h3 class="works__section-title tgl-switch">
                 <div class="works__section-icon">
-                  <img src="../img/home/work_section_title_icon1.svg" alt="" />
+                  <img src="../img/home/work_section_title_icon1.svg" alt="work_section_title_icon1" />
                 </div>
                 主要技能需求
               </h3>
@@ -160,7 +160,7 @@
                   <div class="c-tags__item">
                     <a href="#" class="c-tags__link -red">
                       <span class="c-tags__icon">
-                        <img src="../img/home/skill_tags_icon.svg" alt="" />
+                        <img src="../img/home/skill_tags_icon.svg" alt="skill_tags_icon" />
                       </span>
                       <span class="-underline">如何得到Ａ＋＋</span>
                     </a>
@@ -172,7 +172,7 @@
 
           <div class="rank-base" id="rank-base">
             <div class="rank-base-title">
-              <img src="../img/icon/売り上げ分析アイコン.png" alt="">評分標準
+              <img src="../img/icon/salesAnalysis.png" alt="">評分標準
             </div>
             <table class="rankBase">
               <tr>
