--- a/reg/step1.html
+++ b/reg/step1.html
@@ -78,8 +78,8 @@
               <td><input type="text" name="family_name" id="family-name" required></td>
             </tr>
             <tr>
-              <td class="icon-required"><label for="givin-name">名字</label></td>
-              <td><input type="text" name="givin_name" id="givin-name" required></td>
+              <td class="icon-required"><label for="given-name">名字</label></td>
+              <td><input type="text" name="given_name" id="given-name" required></td>
             </tr>
             <tr>
               <td class="icon-required"><label for="birthday">出生日期</label></td>
