--- a/userlogin.html
+++ b/userlogin.html
@@ -38,11 +38,11 @@
         <div class="login-form__title">會員登入</div>
         <table class="login-form__form">
           <tr>
-            <td><label for="">ID帳號</label></td>
-            <td><input type="id" name="user_id"></td>
+            <td><label for="user_id">ID帳號</label></td>
+            <td><input type="text" name="user_id"></td>
           </tr>
           <tr>
-            <td><label for="">密碼</label></td>
+            <td><label for="password">密碼</label></td>
             <td><input type="password" name="password"></td>
           </tr>
         </table>      
