--- a/mypage/editskill.html
+++ b/mypage/editskill.html
@@ -30,7 +30,7 @@
       </div>
 
       <div class="user-skill-whitebox">
-        <form class="user-skill-contents" action="action.php" method="post" enctype="multipart/form-data">
+        <form class="user-skill-contents" action="" method="post" enctype="multipart/form-data">
           <div class="job-categories1">
             <div class="job-categories1-title">職業類別1</div>
             <div class="job-categories1-checkbox">
