--- a/reg/step1.html
+++ b/reg/step1.html
@@ -59,7 +59,7 @@
 
       <!-- white-box Account-information -->
       <div class="account-info">
-        <form class="form-account-info" action="action.php" method="post" enctype="multipart/form-data">
+        <form class="form-account-info" action="" method="post" enctype="multipart/form-data">
           <table class="account-info-input">
             <tr>
               <td class="icon-required"><label for="user-id">ID帳號</label></td>
