--- a/reg/step2.html
+++ b/reg/step2.html
@@ -40,7 +40,7 @@
         填寫個人履歷
       </div>
       <div class="user-resume-whitebox">
-        <form class="user-resume-contents" action="action.php" method="post" enctype="multipart/form-data">
+        <form class="user-resume-contents" action="" method="post" enctype="multipart/form-data">
           <!-- personal-information -->
           <div class="personal-info">
             <div class="personal-info-title">陳小喬</div>
