update: 現時点で可能な部分だけリンク貼り替え

--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -22,7 +22,7 @@
         <div class="header__middle">
           <div class="header__inner">
             <h1 class="h-logo">
-              <a href="/">
+              <a href="../index.html">
                 <img src="../img/logo.svg" alt="A++" />
               </a>
             </h1>
@@ -43,12 +43,10 @@
 
       <!-- white-box Account-information -->
       <div class="account-info-edit">
-        <!-- TODO: actionは空でおいておこう @shin　-->
         <form class="form-account-info" action="" method="post" enctype="multipart/form-data">
           <table class="account-info-input">
             <tr>
               <td class="icon-required"><label for="user-id">ID帳號</label></td>
-              <!-- TODO: このtypeはサポートされているの？ @shin -->
               <td><input type="text" name="user_id" id="user-id" required></td>
             </tr>
             <tr>
@@ -64,7 +62,6 @@
               <td><input type="text" name="family_name" id="family-name" required></td>
             </tr>
             <tr>
-              <!-- TODO:スペルミス -->
               <td class="icon-required"><label for="given-name">名字</label></td>
               <td><input type="text" name="given_name" id="given-name" required></td>
             </tr>
