--- a/password/confirm.html
+++ b/password/confirm.html
@@ -17,7 +17,7 @@
             <div class="header__middle">
               <div class="header__inner">
                   <h1 class="h-logo">
-                    <a href="/">
+                    <a href="../index.html">
                       <img src="../img/logo.svg" alt="A++"/>
                     </a>
                   </h1>
