--- a/userlogin.html
+++ b/userlogin.html
@@ -1,5 +1,3 @@
-<!-- TODO: 全ページへのリンクが掲載されているページを作成→ページ数が多く、確認に時間がかかるため @shin -->
-<!-- TODO: リンクが貼れるページでは全て貼り替える(全ページ) @shin -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,7 +17,7 @@
         <div class="header__middle">
           <div class="header__inner">
             <h1 class="h-logo">
-              <a href="">
+              <a href="index.html">
                 <img src="./img/logo.svg" alt="A++" />
               </a>
             </h1>
