fix: コードエラー修正(divの閉じタグ)

--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="../css/style.css"/>
   </head>
   <body id="pagetop">
-    <!-- TODO:コードエラーがある @shin -->
     <header class="header">
         <!-- Middle -->
         <div class="header__middle">
@@ -27,6 +26,7 @@
               </a>
             </h1>
             <div class="c-spacer"></div>
+          </div>
         </div>
     </header>
     <div class="account-info-body">
