--- a/mypage/editskill.html
+++ b/mypage/editskill.html
@@ -22,6 +22,7 @@
               </a>
             </h1>
             <div class="c-spacer"></div>
+          </div>
         </div>
     </header>
     <div class="user-skill-body">
